# knowledge_extractor

./: CMakeLists.txt  README.md  configure  in.vim
config/: macros.cmake  vim.cmake
run/: mkact.sh  run.sh  show.sh  siox.conf
src/: CMakeLists.txt
src/plugin/: CMakeLists.txt  KnowledgeExtractor.cpp  KnowledgeExtractor.hpp  KnowledgeExtractorOptions.cpp  KnowledgeExtractorOptions.hpp  in.vim
src/plugin/test/: CMakeLists.txt  amuxplugintest.cpp
tools/: CMakeLists.txt  clean.r  fwrite.cpp  input.original.csv
